# Kursovaya-3

./: .env  package.json  pnpm-lock.yaml  structure.txt
.github/workflows/: release.yml
src/: App.module.scss  App.tsx  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/components/: Dashboard.tsx  ProtectedRoute.tsx  dashboard.module.scss
src/components/Header/: Header.module.scss  Header.tsx
src/components/Sidebar/: Sidebar.module.scss  Sidebar.tsx
src/pages/: AdminBookingForm.tsx  AdminBookingsPage.tsx  AdminEditBookingForm.tsx  AdminPage.tsx  BookingForm.tsx  ClientPage.tsx  DashboardPage.tsx  EditBookingForm.tsx  MasterPage.tsx  MasterSchedulePage.tsx  MyBookingsPage.tsx  OwnerAnalyticsPage.tsx  OwnerSettingsPage.tsx  ProfilePage.tsx
src/pages/AuthPages/: Auth.module.scss  LoginPage.tsx  RegisterPage.tsx
src/styles/: globals.scss
