[package]
name = "massage-salon"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "massage-salon"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "postgres", "migrate", "chrono", "uuid", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
aes-gcm = "0.10"
rand = "0.8"
dotenvy = "0.15"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
